Fix overflows so they wrap and don't grow too much.

--- a/styles/modules/modals/_moderatorDetails.scss
+++ b/styles/modules/modals/_moderatorDetails.scss
@@ -6,11 +6,8 @@
     & > .verifiedWrapper {
       min-width: 20%;
       flex-grow: 1;
-    }
-
-    & > .mDetail > * {
-      max-width: 100%;
-      overflow: hidden;
+      max-width: 50%;
+      word-break: break-word;
     }
 
     .verifiedWrapper {
